fixed badge spacing in phone view
the neg padding in the store badges was causing problems in phone view
10/23/2018

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,12 @@
+/* Created 10/23/2018 */
 @import url(//fonts.googleapis.com/css?family=Roboto:400,500,700);
-
 body{
     font: 400 14px/28px "Roboto", sans-serif;
     background: linear-gradient(black, white);
     background-size: cover;
 }
-
 .app-disp-card {
+    margin-top: 0.1in;
     background-color: whitesmoke;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
@@ -18,7 +18,6 @@ body{
     text-align: left;
     color: #322d2d;
 }
-
 .app-disp-card > p {
     line-height: 1.2;
     color: #545454;
@@ -30,7 +29,6 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
-
 .app-disp-card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
 }
@@ -43,32 +41,23 @@ body{
     color: white;
 
 }
-.store-badges{
-   /* background-color: #292828;*/
-}
 div .store-badges > h1 {
    
     color: white;
     text-align: center;
-    padding-bottom: 1px;
+   /* padding-bottom: 0.5px;*/
 }
 .store-badges > img {
-
     display: block;
-    margin-top: -2.5em;
+   /* margin-top: -2.5em;*/
     margin-left: auto;
     margin-right: auto;
     width: 35%;
-
 }
-
-
 .policy{
     background-color: white;
     color: black;
 }
-
-
 .footer-bck{
     background-color:#282828d9;
     z-index: -2;
